[package]
name = "header-append-filter"
version = "0.1.0"
authors = ["Daniel Grimm <dgrimm@redhat.com>"]
edition = "2018"

[dependencies]
# Gotta use my fork because config reading is broken upstream
proxy-wasm = { git = "https://github.com/dgn/proxy-wasm-rust-sdk" }
# proxy-wasm = "0.1.2"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
